[project]
name = "pytorch-base"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
  "transformers>=4.44.0",
  "numpy>=1.22",
  "scipy>=1.9",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "torchaudio>=2.7.0",
]
cu124 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "torchaudio>=2.7.0",
]

[tool.uv]
[[tool.uv.index]]
name     = "pytorch-cpu"
url      = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name     = "pytorch-cu124"
url      = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu",  marker = "extra == 'cpu'" },
  { index = "pytorch-cu124", marker = "extra != 'cpu' and extra == 'cu124'" },
]
torchvision = [
  { index = "pytorch-cpu",  marker = "extra == 'cpu'" },
  { index = "pytorch-cu124", marker = "extra != 'cpu' and extra == 'cu124'" },
]
torchaudio = [
  { index = "pytorch-cpu",  marker = "extra == 'cpu'" },
  { index = "pytorch-cu124", marker = "extra != 'cpu' and extra == 'cu124'" },
]
